fix the avatar on mobile

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ hr {
 	flex-wrap: wrap;
 }
 .ava {
-	height: 100%;
+	height: auto;
 	max-width: 100%;
 	width: auto;
 	overflow: hidden;
